--- a/style.css
+++ b/style.css
@@ -43,8 +43,7 @@ header .logo
   background-position: center;
   cursor: pointer;
 }
-.showcase
-{
+.showcase {
   position: absolute;
   right: 0;
   width: 100%;
@@ -53,7 +52,8 @@ header .logo
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: #111;
+  background: url('your-background-image.jpg') no-repeat center center fixed;
+  background-size: cover;
   transition: 0.5s;
   z-index: 2;
 }
@@ -157,6 +157,7 @@ header .logo
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: black;
 }
 .menu ul
 {
@@ -169,12 +170,12 @@ header .logo
 .menu ul li a
 {
   text-decoration: none;
-  font-size: 24px;
-  color: #111;
+  font-size: 30px;
+  color: white;
 }
 .menu ul li a:hover
 {
-  color: green; 
+  color: blue; 
 }
 
 @media (max-width: 991px)
