--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ header .logo
   color: black;
   text-transform: uppercase;
   cursor: pointer;
+  text-decoration: none;
 }
 .toggle
 {
@@ -42,6 +43,27 @@ header .logo
   background-size: 25px;
   background-position: center;
   cursor: pointer;
+}
+
+.arrow-down {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: block;
+  width: 50px;
+  height: 50px;
+  background-image: url('./images/down-arrow.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  cursor: pointer;
+  animation: bounce 2s infinite;
+}
+
+@keyframes bounce {
+  0% { transform: translateX(-50%) translateY(0); }
+  50% { transform: translateX(-50%) translateY(10px); }
+  100% { transform: translateX(-50%) translateY(0); }
 }
 .showcase {
   position: absolute;
