--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ section {
 }
 
 section h2 {
-  color: #fff;
+  color: black;
   font-size: 10rem;
   letter-spacing: 0.9rem;
   text-align: center;
