--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,7 +1,5 @@
 /*=============== GOOGLE FONTS ===============*/
-@import url("https://fonts.googleapis.com/css2?family=Syne:wght@400;500;600&display=swap");
-
-/*=============== VARIABLES CSS ===============*/
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Sedan:ital@0;1&display=swap');/*=============== VARIABLES CSS ===============*/
 :root {
   --header-height: 3.5rem;
 
@@ -16,7 +14,8 @@
 
   /*========== Font and typography ==========*/
   /*.5rem = 8px | 1rem = 16px ...*/
-  --body-font: "Syne", sans-serif;
+  --body-font: "Raleway", sans-serif;
+
   --h2-font-size: 1.25rem;
   --normal-font-size: .938rem;
 
@@ -136,8 +135,8 @@ img {
   top: 0;
   left: 0;
   width: 100%;
-  background-color: var(--body-color);
-  box-shadow: 0 2px 16px hsla(230, 75%, 32%, .15);
+  /* background-color: var(--body-color); */
+  /* box-shadow: 0 2px 16px hsla(230, 75%, 32%, .15); */
   z-index: var(--z-fixed);
 }
 
@@ -152,6 +151,12 @@ img {
   color: var(--title-color);
   font-weight: var(--font-semi-bold);
   transition: color .4s;
+}
+
+.nav__logo img {
+  width: 200px; /* Adjust the width as needed */
+  height: auto; /* Maintain aspect ratio */
+  margin-top: 10px;
 }
 
 .nav__actions {
