--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -176,7 +176,7 @@ img {
 }
 
 :is(.nav__logo, .nav__search, .nav__login, .nav__toggle, .nav__link):hover {
-  color: var(--first-color);
+  color: black;
 }
 
 /* Navigation for mobile devices */
@@ -398,5 +398,79 @@ img {
 @media screen and (min-width: 1150px) {
   .container {
     margin-inline: auto;
+  }
+}
+
+.gallery {
+  display: flex;
+  justify-content: center;
+  margin-top: 200px;
+}
+
+.thumbnails {
+  display: flex;
+  flex-direction: column;
+  line-height: 0;
+}
+
+.thumbnails li {
+  flex: auto; 
+}
+
+.thumbnails a {
+  display: block;
+}
+
+.thumbnails img {
+  width: 30vmin;
+  height: 20vmin;
+  object-fit: cover;
+  object-position: top;
+}
+
+.slides {
+  overflow: hidden;
+  width: 75vmin;
+  height: 100vmin;
+  position: relative;
+}
+
+.slides li {
+  width: 75vmin;
+  height: 100vmin;
+  position: absolute;
+  z-index: 1;
+}
+
+.slides img {
+  height: 100vmin;
+  object-fit: cover;
+  object-position: top;
+}
+
+.slides li:target {
+  z-index: 3;
+  animation: slide 1s 1;
+}
+
+.slides li:not(:target) {
+  animation: hidden 1s 1;
+}
+
+@keyframes slide {
+  0% {
+    transform: translateY(-100%);
+  }
+  100% {
+    transform: translateY(0%);
+  }
+}
+
+@keyframes hidden {
+  0% {
+    z-index: 2;
+  }
+  100% {
+    z-index: 2;
   }
 }
