--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -147,6 +147,14 @@ img {
   align-items: center;
 }
 
+#navbar {
+  position: fixed; /* Ensures the navbar stays fixed at the top */
+  top: 0; /* Positions the navbar at the top of the viewport */
+  width: 100%; /* Makes the navbar span the entire width of the viewport */
+  z-index: 1000; /* Ensures the navbar appears above other content */
+}
+
+
 .nav__logo {
   color: var(--title-color);
   font-weight: var(--font-semi-bold);
@@ -178,6 +186,12 @@ img {
 :is(.nav__logo, .nav__search, .nav__login, .nav__toggle, .nav__link):hover {
   color: black;
 }
+
+.navbar-hidden {
+  transform: translateY(-100%);
+  transition: transform 0.3s ease;
+}
+
 
 /* Navigation for mobile devices */
 @media screen and (max-width: 1023px) {
