--- a/style.css
+++ b/style.css
@@ -1,79 +1,80 @@
+/* Reset and basic styling */
 * {
       margin: 0;
       padding: 0;
       text-decoration: none;
       list-style: none;
-}
-
-body {
+  }
+  
+  body {
       width: 100%;
       height: 100vh;
       background: url(Hero.jpg) no-repeat 50% 50%;
       background-size: cover;
       display: table;
-}
-
-.content {
+  }
+  
+  .content {
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-}
-
-.content h1 {
+  }
+  
+  .content h1 {
       color: #fff;
       font-family: "Poppins";
       font-weight: 200;
       font-size: 40px;
-}
-
-nav {
+  }
+  
+  nav {
       width: 100%;
       /* background: #000; */
       height: 70px;
       position: static;
       z-index: 1;
-}
-
-nav #brand {
+  }
+  
+  nav #brand {
       float: left;
       display: block;
       margin-left: 84px;
       font-size: 30px;
       line-height: 70px;
       font-weight: bold;
-}
-
-nav #brand a {
+  }
+  
+  nav #brand a {
       color: #fff;
       transition: all 0.3s ease-out;
       font-family: "Poppins";
       font-weight: 300;
-      margin-right: 85px;
-}
-
-nav #menu {
+      margin-right: 150px; /* Adjust margin-right for positioning */
+  }
+  
+  nav #menu {
       float: left;
       left: 50%;
       position: relative;
-}
-
-nav #menu li {
+  }
+  
+  nav #menu li {
       display: inline-block;
       padding: 0px 30px;
       cursor: pointer;
       line-height: 70px;
       position: relative;
       transition: all 0.3s ease-out;
-}
-
-nav #menu li a {
+  }
+  
+  nav #menu li a {
       color: #fff;
       font-family: "Poppins";
       font-weight: 200;
-}
-
-#toggle {
+  }
+  
+  #toggle {
       position: absolute;
       right: 20px;
       top: 14px;
@@ -85,29 +86,29 @@ nav #menu li a {
       transition: all 0.3s ease-out;
       visibility: hidden;
       opacity: 0;
-}
-
-#toggle .span {
+  }
+  
+  #toggle .span {
       height: 3px;
       background: #fff;
       transition: all 0.3s ease-out;
       backface-visibility: hidden;
       margin: 5px auto;
-}
-
-#toggle.on #one {
+  }
+  
+  #toggle.on #one {
       transform: rotate(45deg) translateX(2px) translateY(4px);
-}
-
-#toggle.on #two {
+  }
+  
+  #toggle.on #two {
       opacity: 0;
-}
-
-#toggle.on #three {
+  }
+  
+  #toggle.on #three {
       transform: rotate(-45deg) translateX(8px) translateY(-10px);
-}
-
-#resize {
+  }
+  
+  #resize {
       z-index: 1;
       top: 0px;
       position: absolute;
@@ -118,15 +119,15 @@ nav #menu li a {
       opacity: 0;
       transition: all 1s ease-out;
       display: table;
-}
-
-#resize #menu {
+  }
+  
+  #resize #menu {
       height: 90px;
       display: table-cell;
       vertical-align: center;
-}
-
-#resize #menu li {
+  }
+  
+  #resize #menu li {
       display: block;
       text-align: center;
       padding: 20px 0;
@@ -135,46 +136,48 @@ nav #menu li a {
       font-weight: bold;
       cursor: pointer;
       transition: all 0.3s ease-out;
-}
-
-#resize li:nth-child(1) {
-      margin-top:140px;
-}
-
-#resize #menu li a {
+  }
+  
+  #resize li:nth-child(1) {
+      margin-top: 140px;
+  }
+  
+  #resize #menu li a {
       color: #fff;
-}
-
-#resize.active {
+  }
+  
+  #resize.active {
       visibility: visible;
       opacity: 0.99;
-}
-
-
-@media(max-width: 768px) {
+  }
+  
+  /* Media queries for responsiveness */
+  @media(max-width: 768px) {
       #toggle {
-            visibility: visible;
-            opacity: 1;
-            margin-top: 6px;
+          visibility: visible;
+          opacity: 1;
+          margin-top: 6px;
       }
-
+  
       nav #brand {
-            margin-left: 18px;
+          margin-left: 18px;
+          margin-right: 18px; /* Adjust margin-right for positioning */
       }
-
+  
       #menu a {
-            font-family: "Poppins";
-            font-weight: 200;
-            font-size: 20px;
+          font-family: "Poppins";
+          font-weight: 200;
+          font-size: 20px;
       }
-
+  
       nav #menu {
-            display: none;
+          display: none;
       }
-}
-
-@media(min-width: 768px) {
+  }
+  
+  @media(min-width: 768px) {
       #resize {
-            visibility: hidden !important;
+          visibility: hidden !important;
       }
-}
+  }
+  
