--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 body {
       width: 100%;
       height: 100vh;
-      background: url(Hero.jpg) no-repeat 50% 50%;
+      /* background: url(Hero.jpg) no-repeat 50% 50%; */
       background-size: cover;
       display: table;
 }
@@ -29,11 +29,17 @@ body {
 
 nav {
       width: 100%;
-      background: #000;
       height: 70px;
       position: static;
       z-index: 1;
 }
+
+.navbar-logo {
+      width: 200px; /* Adjust the width as needed */
+      height: 50px; /* Maintain aspect ratio */
+      margin-top: 10px;
+  }
+  
 
 nav #brand {
       float: left;
@@ -45,11 +51,11 @@ nav #brand {
 }
 
 nav #brand a {
-      color: #fff;
+      color: black;
       transition: all 0.3s ease-out;
       font-family: "Poppins";
       font-weight: 300;
-      margin-right: 125px;
+      margin-right: -180px;
 }
 
 nav #menu {
@@ -68,7 +74,7 @@ nav #menu li {
 }
 
 nav #menu li a {
-      color: #fff;
+      color: black;
       font-family: "Poppins";
       font-weight: 200;
 }
@@ -89,7 +95,7 @@ nav #menu li a {
 
 #toggle .span {
       height: 3px;
-      background: #fff;
+      background: black;
       transition: all 0.3s ease-out;
       backface-visibility: hidden;
       margin: 5px auto;
